# niem-info-exch-e2e

./: .env.example  .gitattributes  .gitignore  API_ARCHITECTURE.md  ARCHITECTURE.md  BACKLOG.md  CONTRIBUTING.md  DEMO_HIGHLIGHTS.md  END_TO_END_TESTING.md  GITHUB_ISSUES_VERSION_CONTROL.md  GRAPH_CREATION_PROCESS.md  GRAPH_IMPROVEMENT_GUIDE.md  LICENSE  MANUAL_TESTING_GUIDE.md  MAPPING_YAML_GENERATION.md  MIGRATION_SUMMARY.md  Makefile  NOTICE  README.md  SCHEMA_NDR_FULL_ERRORS.md  SECURITY.md  SENZING_HEALTH_CHECK.md  SENZING_SETUP.md  TROUBLESHOOTING-CMF.md  UI_VALIDATION_ERRORS.md  VALIDATION_ERROR_HANDLING.md  XML_TO_GRAPH_CONVERSION.md  current_api_mapping.yaml  debug_edges.py  debug_metadata.py  dev.ps1  dev.sh  diagnose-cmf.ps1  diagnose-cmf.sh  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  test_get_metadata_refs.py  test_metadata.py  test_traverse_debug.py  (+1 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: 01-flatten-augmentation-properties.md  02-root-node-orphan-prevention.md  03-associations-as-enriched-edges.md  04-xml-to-json-transformation.md  05-ndr-line-numbers-ui.md  06-schema-set-naming.md  07-data-import-wizard.md  08-enable-ssl-tls.md  09-encryption-in-transit.md  10-encryption-at-rest.md  LABELS.md  README.md  TEMPLATE_GUIDE.md  bug-report.md  config.yml  configuration-change.md  dependency-update.md  documentation.md  enhancement.md  feature-request.md  infrastructure-change.md  performance-optimization.md  security-issue.md  technical-debt.md  testing-improvement.md
.github/workflows/: api-tests.yml  auto-version-bump.yml  ci.yml  main-pipeline.yml  pr-checks.yml  quality-gates.yml  ui-tests.yml
api/: .dockerignore  Dockerfile  LINTING_CLEANUP_SUMMARY.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
api/config/: g2.ini.template  g2config.json.template  niem_senzing_mappings.yaml  senzing_default_config.py  senzing_simple_config.py
api/migrations/: README.md
api/src/niem_api/: __init__.py  main.py
api/src/niem_api/clients/: __init__.py  cmf_client.py  neo4j_client.py  niemtran_client.py  s3_client.py  scheval_client.py  senzing_client.py
api/src/niem_api/core/: auth.py  config.py  dependencies.py  env_utils.py  logging.py
api/src/niem_api/handlers/: __init__.py  admin.py  convert.py  entity_resolution.py  graph.py  ingest.py  schema.py
api/src/niem_api/models/: models.py
api/src/niem_api/services/: cmf_to_mapping.py  cmf_tool.py  element_level_treeshaker.py  entity_to_senzing.py  graph_schema.py  import_xml_to_cypher.py  mock_entity_resolution.py  ndr_validator.py  neo4j_client.py  niem_dependency_resolver.py  niemtran_service.py  settings_service.py  storage.py  validate_mapping_coverage.py
api/src/niem_api/services/domain/: __init__.py
api/src/niem_api/services/domain/graph/: __init__.py  schema_manager.py
api/src/niem_api/services/domain/json_to_graph/: __init__.py  converter.py
api/src/niem_api/services/domain/schema/: __init__.py  cmf_parser.py  element_tree.py  mapping.py  parser.py  resolver.py  schema_designer.py  scheval_validator.py  type_discovery.py  validation.py  validator.py  xml_analyzer.py  xsd_element_tree.py  xsd_schema_designer.py
api/src/niem_api/services/domain/xml_to_graph/: __init__.py  converter.py
api/src/niem_api/startup/: initialize_senzing.py
api/src/niem_api/utils/: cmf_to_mapping.py
api/tests/: CONVERTER_BEHAVIOR.md  README.md  TEST_PROGRESS.md
api/tests/fixtures/: CrashDriver.cmf  __init__.py  minimal_mapping.yaml  senzing_fixtures.py  settings_fixtures.py
api/tests/fixtures/crashdriver/: README.md
api/tests/fixtures/crashdriver/schema/niem/domains/: justice.xsd
api/tests/fixtures/sample_schemas/: simple_schema.xsd
api/tests/fixtures/sample_xml/: nested_properties.xml  simple_person.xml
api/tests/fixtures/test_data/: sample_crash_data.json  sample_crash_data.xml
api/tests/integration/: __init__.py  test_graph_isolation_integration.py  test_minio_integration.py  test_ndr_validation_integration.py  test_neo4j_integration.py  test_senzing_entity_resolution.py  test_settings_integration.py
api/tests/unit/: test_type_discovery.py
api/tests/unit/clients/: test_cmf_security.py  test_cmf_validation_parsing.py  test_niemtran_security.py  test_scheval_security.py  test_senzing_client.py
api/tests/unit/core/: test_batch_config.py
api/tests/unit/handlers/: test_admin.py  test_convert_batch.py  test_entity_resolution.py  test_ingest_batch.py  test_ingest_error_handling.py  test_schema.py  test_schema_batch.py  test_settings.py  test_validation_settings.py
api/tests/unit/services/: test_cmf_to_mapping.py  test_cmf_tool.py  test_element_tree.py  test_entity_to_senzing.py  test_graph_isolation.py  test_json_to_graph_converter.py  test_ndr_validator.py  test_neo4j_client.py  test_schema_design_validation.py  test_schema_designer.py  test_settings_service.py  test_xml_to_graph_converter.py  test_xsd_element_tree.py
api/tests/unit/services/converters/: __init__.py  test_xml_property_flattening.py
api/tests/unit/services/domain/xml_to_graph/: test_converter_node_creation.py  test_converter_property_flattening.py
api/tests/utils/: converter_helpers.py  factories.py  test_helpers.py
design/: archive_init_functional_design.md  archive_init_technical_design.md
docs/: CI_CD_PIPELINE.md  GRAPH_GENERATION_LOGIC.md  GRAPH_SCHEMA.md  INGESTION_AND_MAPPING.md  INTEGRATIONS.md  KNOWN_ISSUES.md  PIPELINE_MAINTENANCE.md  PIPELINE_TESTING.md  README.md  SCHEMA_BROWSER_API.md  SCHEMA_BROWSER_ARCHITECTURE.md  SCHEMA_BROWSER_CMF_PARSER.md  SCHEMA_BROWSER_IMPLEMENTATION_SUMMARY.md  SCHEMA_BROWSER_REQUIREMENTS.md  SCHEMA_BROWSER_USER_GUIDE.md  SENZING_MATCH_DETAILS.md  SENZING_SETUP.md  TODO_FUTURE_ENHANCEMENTS.md  UNIT_TESTING.md  VERSIONING.md  WORKFLOWS.md  schema_designer.md  senzing-integration.md
scripts/: check_senzing.sh
ui/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  TEST_STRATEGY.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+188 files in other folders)
